[package]
name = "alt_lang_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clippy = "0.0.302"
csv = "1.2.1"
regex = "1.8.1"
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
